2003-01-18  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file): 
	Free the path.
	
2003-01-18  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c: (cell_renderer_edited),
	(create_and_set_up_tree_view), (fm_list_view_start_renaming_file):
	Don't initiate a rename on mouse clicks.
	Patch from Marten Ter Borgh <marten-devel@terborgh.demon.nl>,
	fixes bug #83552.

2003-01-18  Tõivo Leedjärv  <toivo@linux.ee>

	* configure.in: Added et to ALL_LINGUAS.

2003-01-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c:
	Convert link names and duplicate names with
	g_filename_to/from_utf8(). (#103721)
	Patch from hidetoshi.tajima@sun.com

2003-01-16  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c (nautilus_file_operations_new_folder):
	Convert new directory name with g_filename_from_utf8(). (#90154)
	
2003-01-16  Alexander Larsson  <alexl@redhat.com>


	* nautilus-file-management-properties.desktop.in:
	* src/network-scheme.desktop.in:
	Change the icon to something that exists.

2003-01-14  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-view-identifier.c:
	(nautilus_view_identifier_new), (nautilus_view_identifier_copy),
	(nautilus_view_identifier_new_from_bonobo_server_info),
	(nautilus_view_identifier_free):
	* libnautilus-private/nautilus-view-identifier.h: Add a 
	view_as_label_with_mnemonic field to the server file and 
	NautilusViewIdentifier.
	* src/nautilus-window.c: (add_view_as_bonobo_menu_item): Use
	the mnemonics in the view menu.
	* src/Nautilus_shell.server.in: Add view_as_label_with_mnemonic
	fields to the Icon and List views.

2003-01-14  David Bordoley <bordoley@msu.edu>
 
 	* src/nautilus-view-frame.c
 	Fixed typo in nautilus_view_frame_class_init 
 	s/open_location_in_this_window/open_location_prefer_existing_window 
 	for the prefer existing window case.
