@@ -1,3 +1,13 @@
+2003-01-20  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-file-management-properties.c:
+	Implement the help button.
+
+2003-01-20  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c:
+	Revert the symlink activation change. For later discussion.
+
 2003-01-18  Dave Camp  <dave@ximian.com>
 
 	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file): 
